[package]
name = 'pallet-exchange'
description = 'Simple orderbook based exchange pallet'
repository = 'https://github.com/xlc/orml-workshop/'
authors = ['Bryan Chen']
version = '2.0.1'
edition = '2018'

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { default-features = false, version = '2.0.1' }
frame-system = { default-features = false, version = '2.0.1' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
